<resources>
    <string name="app_name">Login_MVVM_Dagger2_Room</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email_address">Enter email address</string>
    <string name="hint_password">Enter password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_text"><u>Don\'t have account? Sign up here</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_full_name">Enter full name</string>
    <string name="error_empty_message">required</string>
    <string name="error_invalid_email">Enter valid email</string>
    <string name="password_not_match">Password does not match, Please enter correct password.</string>
    <string name="hint_confirm_password">Enter confirm password</string>
</resources>
